# sample-nocode-generative-ai-data-analytics-solution-on-aws

./: .checkov.yaml  .gitignore  .pre-commit-config.yaml  .tflint.hcl  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/lambda_functions/agent_service/src/: handler.py
src/lambda_functions/code_execution/: Dockerfile  requirements.txt
src/lambda_layer/: build_layer.sh  requirements.txt
terraform/: data.tf  dynamodb.tf  example.tfvars  iam.tf  lambda.tf  main.tf  outputs.tf  provider.tf  terraform.tf  variables.tf  vpc.tf
terraform/modules/alb/: cognito.tf  data.tf  main.tf  outputs.tf  variables.tf
terraform/modules/api_gateway/: data.tf  main.tf  outputs.tf  variables.tf
terraform/modules/bedrock_agent/: data.tf  main.tf  outputs.tf  variables.tf
terraform/modules/docker_image/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda_layer/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf
terraform/modules/streamlit/: data.tf  main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: data.tf  main.tf  outputs.tf  variables.tf
terraform/modules/vpce/: main.tf  outputs.tf  variables.tf
terraform/resources/: open_api_spec.tmpl
terraform/resources/policies/: code_execution_temp_role_policy.tmpl  template_bedrock_policy.tmpl  template_dynamodb_policy.tmpl  template_kms_policy.tmpl  template_lambda_policy.tmpl  template_s3_policy.tmpl  template_sqs_policy.tmpl
ui/: Dockerfile  requirements.txt  run_streamlit.sh
ui/app/: api.py  chat_interface.py  util.py
(+17 files in other folders)
