[project]
name = "aws-genai-code-interpreter"
version = "0.1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
aws-lambda-powertools = {extras = ["tracer"], version = "^3.5.0"}
pydantic-settings = "^2.7.1"
boto3 = "^1.36.15"
streamlit = "^1.41.1"
plotly = "^6.0.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.9.3"
checkov = "^3.1.40"
boto3-stubs = {extras = ["bedrock", "bedrock-agent", "bedrock-agent-runtime", "dynamodb", "sts", "lambda", "s3"], version = "*"}
mypy = "^1.15.0"
types-requests = "^2.32.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_return_any=false
warn_unused_configs=true
no_implicit_optional=true
warn_redundant_casts=true
warn_unused_ignores=false
show_column_numbers = true
show_error_codes = true
show_error_context = true
disable_error_code = "annotation-unchecked"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true
